<resources>
    <string name="app_name">My NoteKeeper</string>
    <string name="pref_general_title">General</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_dataSync_title"><![CDATA[Data & Sync]]></string>
    <string name="pref_display_name_defauft">Your name</string>
    <string name="pref_display_email_defauft">Your email</string>
    <string name="pref_favorite_social_media_title">Favorite Social Media</string>
    <string name="Enable_message_notification">Enable message notification</string>
    <string name="email_address_title">Email Address</string>

    <string name="note_course"> Name:%1$s</string>
    <string name="note_title"> Title:%1$s</string>
    <string name="note_text"> Text:%1$s</string>


    <string-array name="pref_entries_favorites_social">
        <item> Google+</item>
        <item>Facebook</item>
        <item >Twitter</item>
    </string-array>

    <string-array name="pref_values_favorites_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item >http://twitter.com</item>
    </string-array>

    <string-array name="pref_default_favorites_social">
        <item>http://plus.google.com</item>

    </string-array>
</resources>
